<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/check_dialog_text"
        android:id="@+id/dialogTextCheck"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center|clip_vertical"
        android:textSize="22dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/yesButton"
        android:layout_below="@+id/dialogTextCheck"
        android:layout_alignParentStart="true"
        android:text="@string/yes" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/noButton"
        android:layout_below="@+id/dialogTextCheck"
        android:layout_alignParentEnd="true" />

</RelativeLayout>