<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/generalLayout"
    android:background="#ffffff">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#d9dadd"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/movementTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Your Movements"
                        android:id="@+id/textView4"
                        android:layout_gravity="center_horizontal" />

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="325dp"
                        android:id="@+id/movementsListView"
                        android:layout_weight="1.22" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/mainTab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:focusableInTouchMode="false"
                    android:layout_margin="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textTotalAmount"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/textTotalBalance"
                        android:textSize="@dimen/mainText"
                        android:textStyle="bold|italic"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/totalAmount"
                        android:layout_below="@+id/textTotalAmount"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="@dimen/mainText"
                        android:text="6000,00"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/totalAmount"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="35dp"
                        android:id="@+id/layoutBankAmount"
                        android:background="#cccbcb">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/textBankAmount"
                            android:id="@+id/textBankAmount"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="italic"
                            android:textSize="@dimen/secondText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="3000,00"
                            android:id="@+id/bankAmount"
                            android:layout_below="@+id/textBankAmount"
                            android:layout_alignParentEnd="true"
                            android:singleLine="true"
                            android:textSize="@dimen/secondText"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutCashAmount"
                        android:background="#cccbcb"
                        android:layout_below="@+id/layoutBankAmount"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="40dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/textCashAmount"
                            android:id="@+id/textCashAmount"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentStart="true"
                            android:textStyle="italic"
                            android:textSize="@dimen/secondText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="3000,00"
                            android:id="@+id/cashAmount"
                            android:layout_below="@+id/textCashAmount"
                            android:layout_alignParentEnd="true"
                            android:singleLine="true"
                            android:textSize="@dimen/secondText"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp" />
                    </RelativeLayout>

                    <ImageButton
                        android:layout_width="145dp"
                        android:layout_height="68dp"
                        android:id="@+id/plusButton"
                        android:src="@drawable/plusbutton"
                        android:scaleType="centerInside"
                        android:layout_below="@+id/layoutCashAmount"
                        android:layout_alignStart="@+id/totalAmount"
                        android:layout_marginTop="36dp"
                        android:layout_toStartOf="@+id/textTotalAmount"
                        android:background="@android:color/transparent" />

                    <ImageButton
                        android:layout_width="145dp"
                        android:layout_height="68dp"
                        android:id="@+id/lessButton"
                        android:src="@drawable/lessbutton"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:layout_gravity="right"
                        android:layout_alignTop="@+id/plusButton"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>


</RelativeLayout>
